--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "bun-bundler",
   "module": "index.ts",
-  "type": "module",
-  "scripts": {
-    "dev": "bun --watch run index.ts"
-  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "vite": "^6.2.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
-  }
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "type": "module"
 }
